columns added in checkins, recipes tables

--- a/app/views/checkins/_form.html.erb
+++ b/app/views/checkins/_form.html.erb
@@ -31,6 +31,14 @@
     <%= f.label :category_id %><br>
     <%= f.number_field :category_id %>
   </div>
+  <div class="field">
+    <%= f.label :category_name %><br>
+    <%= f.text_field :category_name %>
+  </div>
+  <div class="field">
+    <%= f.label :ingredients %><br>
+    <%= f.text_field :ingredients %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
