--- a/app/views/ingredients/show.html.erb
+++ b/app/views/ingredients/show.html.erb
@@ -4,6 +4,14 @@
   <strong>Name:</strong>
   <%= @ingredient.name %>
 </p>
+<p>
+  <strong>Calories:</strong>
+  <%= @ingredient.calories %>
+</p>
+<p>
+  <strong>Price:</strong>
+  <%= @ingredient.price %>
+</p>
 
 <%= link_to 'Edit', edit_ingredient_path(@ingredient) %> |
 <%= link_to 'Back', ingredients_path %>
