--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -22,6 +22,8 @@
         <td><%= recipe.message %></td>
         <td><%= recipe.score %></td>
         <td><%= recipe.category_id %></td>
+        <td><%= recipe.category_name %></td>
+        <td><%= recipe.ingredients%></td>
         <td><%= link_to 'Show', recipe %></td>
         <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
         <td><%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
