--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -25,5 +25,15 @@
   <%= @recipe.category_id %>
 </p>
 
+<p>
+  <strong>Category:</strong>
+  <%= @recipe.category_name %>
+</p>
+
+<p>
+  <strong>Ingredients:</strong>
+  <%= @recipe.ingredients %>
+</p>
+
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
 <%= link_to 'Back', recipes_path %>
