Added PictureUrl to recipes

--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -39,6 +39,10 @@
     <%= f.label :ingredients %><br>
     <%= f.text_field :ingredients %>
   </div>
+    <div class="field">
+    <%= f.label :picture %><br>
+    <%= f.text_field :picture %>
+  </div>
   <div class="actions">
     <%= f.submit %>
   </div>
