--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -8,7 +8,10 @@
       <th>Description</th>
       <th>Message</th>
       <th>Score</th>
-      <th>Category</th>
+      <th>CategoryId</th>
+      <th>CategoryName</th>
+      <th>Ingredients</th>
+      <th>PictureURL</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +27,7 @@
         <td><%= recipe.category_id %></td>
         <td><%= recipe.category_name %></td>
         <td><%= recipe.ingredients%></td>
+         <td><%= recipe.picture%></td>
         <td><%= link_to 'Show', recipe %></td>
         <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
         <td><%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
