--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -35,5 +35,10 @@
   <%= @recipe.ingredients %>
 </p>
 
+<p>
+  <strong>PictureUrl:</strong>
+  <%= @recipe.picture %>
+</p>
+
 <%= link_to 'Edit', edit_recipe_path(@recipe) %> |
 <%= link_to 'Back', recipes_path %>
